<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">看豆窝</string>
    <string name="main_home">书架</string>
    <string name="main_hot">书城</string>
    <string name="main_search">搜索</string>
    <string name="main_user">我的</string>
    <string name="exit_message">再按一次退出看豆窝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_book_keywords">关键字查询</string>
    <string name="guess_book_name">猜测书名</string>
    <string name="guess_book_lable">请选择该封面对应的书名：</string>
    <string name="clear_history">清除历史记录</string>

    <!-- 主页 -->
    <string name="my_shelf_tab">我的书架</string>
    <string name="local_shelf_tab">导入藏书</string>
    <string name="local_add_book">本地</string>
    <string name="local_add_book_tip">随时随地在看豆窝导入本地好书</string>

    <!-- 个人中心 -->
    <string name="main_mine">个人中心</string>
    <string name="text_new">NEW</string>
    <string name="text_settings">设置</string>
    <string name="text_login">登录</string>
    <string name="text_game">游戏</string>
    <string name="text_photo">照片墙</string>
    <string name="text_read_history">我的阅历</string>
    <string name="text_vip_center">会员中心</string>

    <!-- 登录 -->
    <string name="text_register_btn">注册</string>
    <string name="text_username">邮箱</string>
    <string name="text_password">密码</string>
    <string name="text_register">免费注册</string>
    <string name="text_forget_psw">忘记密码</string>
    <string name="login_user_name_is_null">请输入邮箱</string>
    <string name="login_password_is_null">请输入密码</string>

    <!-- 注册 -->
    <string name="register_email">注册邮箱</string>
    <string name="register_password">输入密码</string>
    <string name="register_password_confirm">确认密码</string>
    <string name="register_confirm_password_is_null">请输入确认密码</string>
    <string name="regitster_confirm_false">两次密码不一致，请重新输入</string>

    <!-- kindle摄影区 -->
    <string name="title_activity_camera">照片墙</string>
    <string name="kindle_camera">Kindle摄影区</string>

    <!-- 搜索页 -->
    <string name="text_search">搜索</string>
    <string name="text_search_result">搜索结果</string>
    <string name="fetch_data_failed">数据获取失败</string>
    <string name="check_network_then_click_for_retry">请检查网络后点击重新加载</string>
    <string name="empty_info">暂无此信息</string>
    <string name="loading">加载中</string>
    <string name="page_footer_failed">数据获取失败，点击重试</string>
    <string name="empty_publisher">暂无出版社信息</string>

    <!-- 热词 -->
    <string-array name="search_hot_word">
        <item>热门搜索</item>
        <item>百年孤独</item>
        <item>莫言</item>
        <item>逻辑思维</item>
        <item>韩寒</item>
        <item>C语言</item>
        <item>KTV</item>
        <item>文艺复兴</item>
        <item>Android</item>
        <item>哈利波特</item>
        <item>薛章斌</item>
        <item>罗生门</item>
        <item>杨鑫</item>
    </string-array>

    <!-- 二维码 -->
    <string name="code_hint">将图书条形码放入框中，即可自动完成扫描</string>
    <string name="flash_open">闪光灯已开启</string>
    <string name="flash_close">闪光灯已关闭</string>
    <string name="title_activity_search_result">SearchResultActivity</string>

    <!-- 设置页面 -->
    <string name="screen_light">屏幕亮度</string>
    <string name="follow_system_light">跟随系统亮度</string>
    <string name="read_show_notice_bar">阅读时显示通知栏</string>
    <string name="check_for_update">检查软件更新</string>
    <string name="user_help_notice">使用帮助</string>
    <string name="suggest_back">意见反馈</string>
    <string name="about_us">关于</string>
</resources>
