<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_username_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/white">

        <com.kindleren.kandouwo.widget.AutoCompleteTextViewWithClearButton
            android:id="@+id/edit_email"
            android:layout_width="fill_parent"
            android:background="@drawable/bg_edit_selector"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:scrollbars="none"
            android:singleLine="true"
            android:textColorHint="@color/black3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_h6"/>

        <com.kindleren.kandouwo.widget.EditTextWithClearButton
            android:id="@+id/edit_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_selector"
            android:hint="@string/register_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="@color/black3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_h6"/>

        <com.kindleren.kandouwo.widget.EditTextWithClearButton
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_selector"
            android:hint="@string/register_password_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="@color/black3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_h6"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_cornered_blue"
            android:gravity="center"
            android:textSize="@dimen/text_size_h3"
            android:textColor="@color/white"
            android:text="@string/text_register_btn">
        </Button>

        <ProgressBar
            android:id="@+id/register_progress"
            style="@style/progress_bar_style_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>