<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.actionbarsherlock.internal.widget.IcsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:divider="@drawable/gray_horizontal_separator"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end">

        <!-- 屏幕亮度 -->
        <LinearLayout
            android:id="@+id/screen_light"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/list_row_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="3dp">

            <TextView
                android:id="@+id/text_screen_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/screen_light"
                android:textColor="@color/black1"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/screen_light_seekbar"
                android:progressDrawable="@drawable/seek_bar_style"
                android:thumb="@drawable/thumb_seek_bar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:max="100"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"/>

        </LinearLayout>

        <!-- 跟随系统亮度 -->
        <LinearLayout
            android:id="@+id/user_settings_game"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/list_row_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/text_user_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/follow_system_light"
                android:textColor="@color/black1"
                android:textSize="16sp" />

            <com.kindleren.kandouwo.widget.SwitchButton
                android:id="@+id/follow_screen_light_switch_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- 阅读时显示通知栏 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/list_row_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/read_show_notice_bar"
                android:textColor="@color/black1"
                android:textSize="16sp" />

            <com.kindleren.kandouwo.widget.SwitchButton
                android:id="@+id/read_show_notice_switch_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </com.actionbarsherlock.internal.widget.IcsLinearLayout>

    <com.actionbarsherlock.internal.widget.IcsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:divider="@drawable/gray_horizontal_separator"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end">

        <!-- 检查软件更新 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/list_row_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/check_for_update"
                android:textColor="@color/black1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black3"
                android:text="0.1.2"/>

        </LinearLayout>

        <!-- 使用帮助 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/list_row_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/user_help_notice"
                android:textColor="@color/black1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_global_arrow_right" />

        </LinearLayout>

        <!-- 意见反馈 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/list_row_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/suggest_back"
                android:textColor="@color/black1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_global_arrow_right" />

        </LinearLayout>

        <!-- 关于 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/list_row_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/about_us"
                android:textColor="@color/black1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_global_arrow_right" />

        </LinearLayout>

    </com.actionbarsherlock.internal.widget.IcsLinearLayout>

</LinearLayout>