<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.kindleren.kandouwo.login.LoginScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_username_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@color/white">

            <com.kindleren.kandouwo.widget.AutoCompleteTextViewWithClearButton
                android:id="@+id/edit_username"
                android:layout_width="fill_parent"
                android:background="@drawable/bg_edit_selector"
                android:layout_height="wrap_content"
                android:hint="@string/text_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:scrollbars="none"
                android:singleLine="true"
                android:textColorHint="@color/black3"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_h6"/>

            <com.kindleren.kandouwo.widget.EditTextWithClearButton
                android:id="@+id/edit_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edit_selector"
                android:hint="@string/text_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColorHint="@color/black3"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_h6"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_login_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <FrameLayout
                android:id="@+id/layout_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_cornered_green"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_h3"
                    android:textColor="@color/white"
                    android:text="@string/text_login">
                </Button>

                <ProgressBar
                    android:id="@+id/login_progress"
                    style="@style/progress_bar_style_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"/>
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@color/green"
                    android:text="@string/text_register"
                    android:textSize="@dimen/text_size_h6"/>

                <TextView
                    android:id="@+id/dynamic_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/green"
                    android:text="@string/text_quick_login"
                    android:textSize="@dimen/text_size_h6"/>
            </RelativeLayout>

        </LinearLayout>
        </LinearLayout>
    </com.kindleren.kandouwo.login.LoginScrollView>

</FrameLayout>