<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--  个人中心用户登录和基本信息展示  -->
        <FrameLayout
            android:id="@+id/user_main_login_container"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            />

        <com.actionbarsherlock.internal.widget.IcsLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/gray_horizontal_separator"
            android:orientation="vertical"
            android:showDividers="middle|beginning|end">

            <LinearLayout
                android:id="@+id/user_settings"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/list_row_selector"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/text_user_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icon_setting"
                    android:drawablePadding="10dp"
                    android:text="@string/text_settings"
                    android:textColor="@color/black1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_new_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_global_lable_red"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:text="@string/text_new"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_h10"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_global_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_settings_game"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/list_row_selector"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/text_user_game"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icon_setting"
                    android:drawablePadding="10dp"
                    android:text="@string/text_game"
                    android:textColor="@color/black1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_new_flag_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_global_lable_red"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:text="@string/text_new"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_h10"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_global_arrow_right" />
            </LinearLayout>


        </com.actionbarsherlock.internal.widget.IcsLinearLayout>

    </LinearLayout>

</ScrollView>